# todox

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
src/: app.rs  cli.rs  convert.rs  lib.rs  main.rs  model.rs  repository.rs  tui.rs  ui.rs
tests/: cli_smoke.rs
