[package]
name = "todox"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for browsing TOON-based todo tickets"
license = "MIT"
rust-version = "1.78"

[[bin]]
name = "todo"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toon-format = "0.2"
anyhow = "1"
notify = "6"
clap = { version = "4", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"
